--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
     <!-- Memes will be loaded here -->
   </main>
 
+  <!-- Voting Section -->
+  <section class="bg-white p-8 mt-10 rounded-xl shadow-lg">
+    <h2 class="text-2xl font-bold mb-6 text-center text-orange-600">Vote for Your Favorite Meme!</h2>
+    <div id="votingGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+      <!-- Voting items will be here -->
+    </div>
+  </section>
+
   <!-- Upload Modal -->
   <div class="upload-modal" id="uploadModal">
     <div class="bg-white p-6 rounded-xl w-96">
@@ -86,13 +94,31 @@
     </div>
   </div>
 
- <script type="module">
-  import { connectWallet } from './connectButton.js';
-  document.getElementById('connectButton').onclick = connectWallet;
-</script>
-
-
   <script>
+    // Функция для подключения MetaMask
+    async function connectWallet() {
+      if (typeof window.ethereum === 'undefined') {
+        alert('Please install MetaMask!');
+        return;
+      }
+
+      try {
+        const provider = new ethers.providers.Web3Provider(window.ethereum);
+        await provider.send('eth_requestAccounts', []); // Запрос на подключение кошелька
+        const signer = provider.getSigner();
+        const address = await signer.getAddress();
+        
+        // Изменяем текст кнопки на адрес кошелька
+        const button = document.getElementById('connectButton');
+        button.textContent = `Disconnect (${address.slice(0, 6)}...${address.slice(-4)})`;
+        button.classList.remove('bg-white/90', 'text-orange-600');
+        button.classList.add('bg-red-600', 'text-white');
+      } catch (error) {
+        console.error('Connection error:', error);
+      }
+    }
+
+    // Массив мемов
     const memes = [
       {id: 1, title: 'Doge Classic', votes: 1520, url: 'https://dzmitryy1812.github.io/public/memes/1.jpg', author: 'memelord#1234'},
       {id: 2, title: 'Surprised Pikachu', votes: 2345, url: 'https://dzmitryy1812.github.io/public/memes/2.jpg', author: 'pokefan#5678'},
@@ -102,39 +128,34 @@
       {id: 6, title: 'Drake Hotline Bling', votes: 3120, url: 'https://dzmitryy1812.github.io/public/memes/6.jpg', author: 'drakepost#1234'}
     ];
 
-    function renderMemes() {
-      const grid = document.getElementById('memeGrid');
-      grid.innerHTML = memes.map(meme => ` 
-        <div class="meme-container mb-8" data-id="${meme.id}">
-          <div class="p-4">
-            <img src="${meme.url}" class="meme-image mx-auto" alt="${meme.title}" onerror="this.src='https://via.placeholder.com/800x600?text=Image+Error'">
-          </div>
-          <div class="p-4 bg-white/95">
-            <div class="flex items-center justify-between mb-2">
-              <h3 class="text-xl font-bold text-orange-900">${meme.title}</h3>
-              <span class="text-sm text-orange-600"><i class="fas fa-user mr-1"></i>${meme.author}</span>
-            </div>
-            <div class="flex items-center justify-between">
-              <span class="text-orange-600 font-medium">
-                <i class="fas fa-heart mr-1"></i><span class="vote-count">${meme.votes}</span>
-              </span>
-              <button class="vote-btn bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-orange-600">Vote</button>
-            </div>
+    // Функция рендеринга мемов в блок для голосования
+    function renderVotingMemes() {
+      const votingGrid = document.getElementById('votingGrid');
+      votingGrid.innerHTML = memes.map(meme => `
+        <div class="p-4 bg-white rounded-lg shadow-md text-center">
+          <img src="${meme.url}" class="meme-image mx-auto mb-4" alt="${meme.title}" onerror="this.src='https://via.placeholder.com/800x600?text=Image+Error'">
+          <h3 class="font-bold text-lg text-orange-600">${meme.title}</h3>
+          <p class="text-sm text-gray-500 mb-2"><i class="fas fa-user mr-1"></i>${meme.author}</p>
+          <div class="flex justify-between items-center">
+            <span class="text-orange-500 font-medium"><i class="fas fa-heart mr-1"></i>${meme.votes}</span>
+            <button class="vote-btn bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-orange-600">Vote</button>
           </div>
         </div>
       `).join('');
     }
 
+    // Обработчик кнопки голосования
     document.addEventListener('click', e => {
       if (e.target.classList.contains('vote-btn')) {
-        const memeCard = e.target.closest('.meme-container');
-        const voteCount = memeCard.querySelector('.vote-count');
-        voteCount.textContent = parseInt(voteCount.textContent) + 1;
+        const memeCard = e.target.closest('.p-4');
+        const voteCount = memeCard.querySelector('.text-orange-500');
+        voteCount.textContent = `${parseInt(voteCount.textContent) + 1}`;
         e.target.classList.add('bg-orange-700');
         setTimeout(() => e.target.classList.remove('bg-orange-700'), 200);
       }
     });
 
+    // Работа с модальным окном
     const modal = document.getElementById('uploadModal');
     const showModal = () => modal.style.display = 'flex';
     const hideModal = () => modal.style.display = 'none';
@@ -143,22 +164,8 @@
     document.getElementById('closeModal').addEventListener('click', hideModal);
     document.getElementById('cancelBtn').addEventListener('click', hideModal);
 
-    document.getElementById('memeForm').addEventListener('submit', e => {
-      e.preventDefault();
-      const newMeme = {
-        id: memes.length + 1,
-        title: document.getElementById('memeTitle').value,
-        votes: 0,
-        url: document.getElementById('memeUrl').value,
-        author: document.getElementById('discordName').value
-      };
-      memes.push(newMeme);
-      renderMemes();
-      hideModal();
-      e.target.reset();
-    });
-
-    renderMemes();
+    // Визуализация мемов
+    renderVotingMemes();
   </script>
 </body>
 </html>
