--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <i class="fas fa-wallet mr-2"></i> Connect Wallet
       </button>
       <!-- Индикатор сети -->
-      <div id="networkIndicator" class="bg-white/90 text-orange-600 px-4 py-2 rounded-full text-sm" data-status="unknown">
+     //<div id="networkIndicator" class="bg-white/90 text-orange-600 px-4 py-2 rounded-full text-sm" data-status="unknown">
         Network Status
       </div>
     </div>
