--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
   <main class="container mx-auto px-4 py-12">
     <section class="bg-white p-8 rounded-xl shadow-lg">
       <h2 class="text-2xl font-bold mb-6 text-center text-orange-600">Trending Memes</h2>
-      <div id="votingGrid" class="flex flex-col gap-8">
-      </div>
+      <div id="votingGrid" class="flex flex-col gap-8"></div>
     </section>
   </main>
 
