--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       chainId: '0xA867',
       chainName: 'Hemi Network',
       nativeCurrency: {
-        name: 'HEMI',
-        symbol: 'HEMI',
+        name: 'ETH',
+        symbol: 'ETH',
         decimals: 18
       },
       rpcUrls: ['https://rpc.hemi.network/rpc'],
