--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     const HEMI_NETWORK = {
       chainId: '0xA867',
-      chainName: 'Hemi Network',
+      chainName: 'Hemi',
       nativeCurrency: {
         name: 'ETH',
         symbol: 'ETH',
