--- a/index.html
+++ b/index.html
@@ -35,17 +35,6 @@
       align-items: center;
       z-index: 1000;
     }
-    #networkIndicator {
-      transition: all 0.3s ease;
-    }
-    #networkIndicator[data-status="connected"] {
-      background: #10B981 !important;
-      color: white !important;
-    }
-    #networkIndicator[data-status="error"] {
-      background: #EF4444 !important;
-      color: white !important;
-    }
   </style>
 </head>
 <body class="bg-gradient-to-b from-orange-50 to-orange-100 min-h-screen">
@@ -63,7 +52,6 @@
       <button id="connectButton" class="bg-white/90 text-orange-600 px-6 py-3 rounded-full shadow-lg hover:bg-white hover:scale-105 transition-all">
         <i class="fas fa-wallet mr-2"></i> Connect Wallet
       </button>
-      <div id="networkIndicator" class="px-4 py-2 rounded-full text-sm"></div>
     </div>
   </header>
 
@@ -110,15 +98,13 @@
       chainId: '0xA867',
       chainName: 'Hemi',
       nativeCurrency: {
-        name: 'ETH',
-        symbol: 'ETH',
+        name: 'HEMI',
+        symbol: 'HEMI',
         decimals: 18
       },
       rpcUrls: ['https://rpc.hemi.network/rpc'],
       blockExplorerUrls: ['https://explorer.hemi.xyz']
     };
-
-    let currentChainId = null;
 
     async function switchToHemiNetwork() {
       try {
@@ -140,30 +126,6 @@
         }
       }
       await connectWallet();
-      checkNetwork();
-    }
-
-    async function checkNetwork() {
-      try {
-        const chainId = await window.ethereum.request({ method: 'eth_chainId' });
-        currentChainId = chainId;
-        updateNetworkIndicator();
-      } catch (error) {
-        console.error('Network check failed:', error);
-      }
-    }
-
-    function updateNetworkIndicator() {
-      const indicator = document.getElementById('networkIndicator');
-      if (!indicator) return;
-      
-      if (currentChainId === HEMI_NETWORK.chainId) {
-        indicator.textContent = 'Connected to Hemi';
-        indicator.setAttribute('data-status', 'connected');
-      } else {
-        indicator.textContent = 'Wrong Network';
-        indicator.setAttribute('data-status', 'error');
-      }
     }
 
     const memes = [
@@ -254,12 +216,8 @@
       return true;
     }
 
-    window.addEventListener('load', async () => {
+    window.addEventListener('load', () => {
       renderVotingMemes();
-      if (window.ethereum) {
-        window.ethereum.on('chainChanged', checkNetwork);
-        checkNetwork();
-      }
     });
 
     document.getElementById('connectButton').addEventListener('click', switchToHemiNetwork);
