--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       chainId: '0xA867',
       chainName: 'Hemi',
       nativeCurrency: {
-        name: 'HEMI',
-        symbol: 'HEMI',
+        name: 'ETH',
+        symbol: 'ETH',
         decimals: 18
       },
       rpcUrls: ['https://rpc.hemi.network/rpc'],
