--- a/index.html
+++ b/index.html
@@ -1,295 +1,195 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HEMIMEME - Голосование</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HEMIMEME - Meme Platform</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; background: #f3f4f6; padding: 20px; }
-    .meme { background: white; padding: 15px; border-radius: 8px; box-shadow: 0 2px 5px rgb(0 0 0 / 0.1); max-width: 400px; margin-bottom: 20px; }
-    .meme img { max-width: 100%; border-radius: 6px; }
-    .btn-vote { margin-top: 10px; background: #f97316; color: white; border: none; padding: 8px 12px; border-radius: 5px; cursor: pointer; }
-    .btn-vote:hover { background: #ea580c; }
-    #connectButton { background: #f97316; color: white; border: none; padding: 10px 20px; border-radius: 8px; cursor: pointer; font-weight: bold; }
-    #connectButton:hover { background: #ea580c; }
+    .meme-card {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+    .meme-card:hover {
+      transform: translateY(-2px);
+    }
+    .meme-image {
+      max-width: 100%;
+      max-height: 70vh;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+      border-radius: 8px 8px 0 0;
+    }
+    .upload-modal {
+      background: rgba(0,0,0,0.5);
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
   </style>
 </head>
-<body>
+<body class="bg-gradient-to-b from-orange-50 to-orange-100 min-h-screen">
+  <header class="bg-gradient-to-r from-orange-600 to-orange-500 text-white px-6 py-4 flex justify-between items-center sticky top-0 z-50 shadow-xl">
+    <div class="flex items-center gap-3">
+      <img src="https://i.imgur.com/SyOVYBY.jpeg" class="h-12 w-12 rounded-full ring-2 ring-white/30 hover:ring-orange-200 transition-all" alt="HEMIMEME Logo">
+      <h1 class="text-3xl font-bold font-mono">
+        <i class="fas fa-fire mr-2"></i>HEMIMEME
+      </h1>
+    </div>
+    <div class="flex items-center gap-4">
+      <button id="uploadButton" class="bg-orange-500 text-white px-6 py-3 rounded-full shadow-lg hover:bg-orange-600 transition-all">
+        <i class="fas fa-plus mr-2"></i> Submit Meme
+      </button>
+      <button id="connectButton" class="bg-white/90 text-orange-600 px-6 py-3 rounded-full shadow-lg hover:bg-white hover:scale-105 transition-all">
+        <i class="fas fa-wallet mr-2"></i> Connect Wallet
+      </button>
+    </div>
+  </header>
 
-  <button id="connectButton">Connect Wallet</button>
+  <main class="container mx-auto px-4 py-12">
+    <section class="bg-white p-8 rounded-xl shadow-lg">
+      <h2 class="text-2xl font-bold mb-6 text-center text-orange-600">Trending Memes</h2>
+      <div id="votingGrid" class="flex flex-col gap-8"></div>
+    </section>
+  </main>
 
-  <h1>Голосование за мемы</h1>
+  <div class="upload-modal" id="uploadModal">
+    <div class="bg-white p-6 rounded-xl w-96">
+      <div class="flex justify-between items-center mb-4">
+        <h2 class="text-2xl font-bold">Submit New Meme</h2>
+        <button id="closeModal" class="text-orange-600 hover:text-orange-800">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <form id="memeForm" class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium mb-2">Discord Username</label>
+          <input type="text" id="discordName" required class="w-full px-4 py-2 border rounded-lg" placeholder="username#1234">
+        </div>
+        <div>
+          <label class="block text-sm font-medium mb-2">Meme Title</label>
+          <input type="text" id="memeTitle" required class="w-full px-4 py-2 border rounded-lg" placeholder="Enter meme title">
+        </div>
+        <div>
+          <label class="block text-sm font-medium mb-2">Image URL</label>
+          <input type="url" id="memeUrl" required class="w-full px-4 py-2 border rounded-lg" placeholder="https://example.com/meme.jpg">
+        </div>
+        <div class="flex justify-end gap-4">
+          <button type="button" id="cancelBtn" class="px-4 py-2 text-gray-600 hover:text-gray-800">Cancel</button>
+          <button type="submit" class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
 
-  <div id="memesContainer"></div>
+  <script type="module">
+    import { connectWallet } from './connectButton.js';
 
-  <script>
-    const contractAddress = '0x715045cea81d1dcc604b6a379b94d6049cdaa5a0';
-    const contractABI = [
-      {
-        "inputs": [
-          {
-            "internalType": "string",
-            "name": "_cid",
-            "type": "string"
-          }
-        ],
-        "name": "addMeme",
-        "outputs": [
-          {
-            "internalType": "uint256",
-            "name": "",
-            "type": "uint256"
-          }
-        ],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "inputs": [],
-        "stateMutability": "nonpayable",
-        "type": "constructor"
-      },
-      {
-        "anonymous": false,
-        "inputs": [
-          {
-            "indexed": false,
-            "internalType": "uint256",
-            "name": "memeId",
-            "type": "uint256"
-          },
-          {
-            "indexed": false,
-            "internalType": "string",
-            "name": "cid",
-            "type": "string"
-          }
-        ],
-        "name": "MemeAdded",
-        "type": "event"
-      },
-      {
-        "inputs": [
-          {
-            "internalType": "uint256",
-            "name": "_memeId",
-            "type": "uint256"
-          }
-        ],
-        "name": "vote",
-        "outputs": [],
-        "stateMutability": "nonpayable",
-        "type": "function"
-      },
-      {
-        "anonymous": false,
-        "inputs": [
-          {
-            "indexed": false,
-            "internalType": "uint256",
-            "name": "memeId",
-            "type": "uint256"
-          },
-          {
-            "indexed": false,
-            "internalType": "address",
-            "name": "voter",
-            "type": "address"
-          }
-        ],
-        "name": "Voted",
-        "type": "event"
-      },
-      {
-        "inputs": [
-          {
-            "internalType": "uint256",
-            "name": "_memeId",
-            "type": "uint256"
-          }
-        ],
-        "name": "getCid",
-        "outputs": [
-          {
-            "internalType": "string",
-            "name": "",
-            "type": "string"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      },
-      {
-        "inputs": [
-          {
-            "internalType": "uint256",
-            "name": "_memeId",
-            "type": "uint256"
-          }
-        ],
-        "name": "getVotes",
-        "outputs": [
-          {
-            "internalType": "uint256",
-            "name": "",
-            "type": "uint256"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      },
-      {
-        "inputs": [
-          {
-            "internalType": "address",
-            "name": "",
-            "type": "address"
-          },
-          {
-            "internalType": "uint256",
-            "name": "",
-            "type": "uint256"
-          }
-        ],
-        "name": "hasVoted",
-        "outputs": [
-          {
-            "internalType": "bool",
-            "name": "",
-            "type": "bool"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      },
-      {
-        "inputs": [],
-        "name": "memeCount",
-        "outputs": [
-          {
-            "internalType": "uint256",
-            "name": "",
-            "type": "uint256"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      },
-      {
-        "inputs": [
-          {
-            "internalType": "uint256",
-            "name": "",
-            "type": "uint256"
-          }
-        ],
-        "name": "memes",
-        "outputs": [
-          {
-            "internalType": "string",
-            "name": "cid",
-            "type": "string"
-          },
-          {
-            "internalType": "uint256",
-            "name": "votes",
-            "type": "uint256"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      },
-      {
-        "inputs": [],
-        "name": "owner",
-        "outputs": [
-          {
-            "internalType": "address",
-            "name": "",
-            "type": "address"
-          }
-        ],
-        "stateMutability": "view",
-        "type": "function"
-      }
+    // Массив мемов
+    const memes = [
+      {id: 1, title: 'Classic Doge', votes: 1520, url: 'https://dzmitryy1812.github.io/public/memes/1.jpg', author: 'memelord#1234'},
+      {id: 2, title: 'Surprised Pikachu', votes: 2345, url: 'https://dzmitryy1812.github.io/public/memes/2.jpg', author: 'pokefan#5678'},
+      {id: 3, title: 'Success Kid', votes: 1789, url: 'https://dzmitryy1812.github.io/public/memes/3.jpg', author: 'kidlover#9012'},
+      {id: 4, title: 'Distracted Boyfriend', votes: 2956, url: 'https://dzmitryy1812.github.io/public/memes/4.jpg', author: 'relshipmeme#3456'},
+      {id: 5, title: 'Evil Kermit', votes: 1678, url: 'https://dzmitryy1812.github.io/public/memes/5.jpg', author: 'muppets#7890'},
+      {id: 6, title: 'Drake Reaction', votes: 3120, url: 'https://dzmitryy1812.github.io/public/memes/6.jpg', author: 'drakepost#1234'}
     ];
 
-    let contract;
-    let signer;
-
-    async function connectWallet() {
-      if (!window.ethereum) {
-        alert('Пожалуйста, установите MetaMask!');
-        return;
-      }
-
-      const provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send('eth_requestAccounts', []);
-      signer = provider.getSigner();
-      contract = new ethers.Contract(contractAddress, contractABI, signer);
-
-      document.getElementById('connectButton').textContent = 'Wallet Connected';
-      await loadMemes();
+    function renderVotingMemes() {
+      const votingGrid = document.getElementById('votingGrid');
+      votingGrid.innerHTML = memes.map(meme => `
+        <div class="meme-card" data-id="${meme.id}">
+          <div class="p-6">
+            <img src="${meme.url}" class="meme-image mx-auto mb-4" alt="${meme.title}" 
+                 onerror="this.src='https://via.placeholder.com/800x600?text=Image+Failed+to+Load'">
+            <div class="space-y-3">
+              <h3 class="text-xl font-bold text-orange-600">${meme.title}</h3>
+              <p class="text-sm text-gray-500"><i class="fas fa-user mr-2"></i>Submitted by ${meme.author}</p>
+              <div class="flex justify-between items-center pt-4">
+                <span class="text-orange-500 font-medium">
+                  <i class="fas fa-heart mr-2"></i>${meme.votes} votes
+                </span>
+                <button class="vote-btn bg-orange-500 text-white px-6 py-2 rounded-lg hover:bg-orange-600 transform transition hover:scale-105">
+                  Vote Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      `).join('');
     }
 
-    async function loadMemes() {
-      const container = document.getElementById('memesContainer');
-      container.innerHTML = 'Загрузка мемов...';
-
-      try {
-        const count = (await contract.memeCount()).toNumber();
-        container.innerHTML = '';
-
-        for (let i = 1; i <= count; i++) {
-          const meme = await contract.memes(i);
-          const memeDiv = document.createElement('div');
-          memeDiv.className = 'meme';
-
-          // Используем CID как URL к картинке (если CID - IPFS, можно использовать шлюз)
-          // Если CID - это URL с GitHub, используем напрямую
-          let imageUrl = meme.cid;
-          if (!imageUrl.startsWith('http')) {
-            // Предположим, что CID - IPFS хеш, используем публичный шлюз
-            imageUrl = `https://ipfs.io/ipfs/${meme.cid}`;
-          }
-
-          memeDiv.innerHTML = `
-            <h3>${memeDiv.id}. Meme ID: ${i}</h3>
-            <img src="${imageUrl}" alt="Meme ${i}" />
-            <p>Голосов: ${meme.votes.toNumber()}</p>
-            <button class="btn-vote" onclick="vote(${i})">Голосовать</button>
-          `;
-
-          container.appendChild(memeDiv);
+    document.addEventListener('click', e => {
+      if (e.target.classList.contains('vote-btn')) {
+        const memeCard = e.target.closest('[data-id]');
+        const memeId = parseInt(memeCard.dataset.id);
+        const meme = memes.find(m => m.id === memeId);
+        if (meme) {
+          meme.votes++;
+          const voteCount = memeCard.querySelector('.text-orange-500');
+          voteCount.innerHTML = `<i class="fas fa-heart mr-2"></i>${meme.votes} votes`;
+          e.target.classList.add('bg-orange-700', 'scale-100');
+          setTimeout(() => e.target.classList.remove('bg-orange-700', 'scale-100'), 200);
         }
-      } catch (error) {
-        container.innerHTML = 'Ошибка загрузки мемов.';
-        console.error(error);
       }
-    }
+    });
 
-    async function vote(memeId) {
+    // Модальное окно
+    const modal = document.getElementById('uploadModal');
+    const showModal = () => modal.style.display = 'flex';
+    const hideModal = () => modal.style.display = 'none';
+
+    document.getElementById('uploadButton').addEventListener('click', showModal);
+    document.getElementById('closeModal').addEventListener('click', hideModal);
+    document.getElementById('cancelBtn').addEventListener('click', hideModal);
+
+    document.getElementById('memeForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const newMeme = {
+        id: memes.length + 1,
+        title: document.getElementById('memeTitle').value.trim(),
+        votes: 0,
+        url: document.getElementById('memeUrl').value.trim(),
+        author: document.getElementById('discordName').value.trim()
+      };
+      if (validateMeme(newMeme)) {
+        memes.unshift(newMeme);
+        renderVotingMemes();
+        this.reset();
+        hideModal();
+      }
+    });
+
+    function validateMeme(meme) {
+      const discordRegex = /^[^#]+#\d{4}$/;
       try {
-        const userAddress = await signer.getAddress();
-        const hasVoted = await contract.hasVoted(userAddress, memeId);
-        if (hasVoted) {
-          alert('Вы уже голосовали за этот мем.');
-          return;
-        }
-
-        const tx = await contract.vote(memeId);
-        await tx.wait();
-        alert('Голос успешно отдан!');
-        await loadMemes();
-      } catch (error) {
-        alert('Ошибка при голосовании: ' + error.message);
+        new URL(meme.url);
+      } catch {
+        alert('Please enter a valid image URL');
+        return false;
       }
+      if (!discordRegex.test(meme.author)) {
+        alert('Invalid Discord format (username#1234)');
+        return false;
+      }
+      return true;
     }
 
+    window.addEventListener('load', () => {
+      renderVotingMemes();
+    });
+
+    // Подключение кошелька
     document.getElementById('connectButton').addEventListener('click', connectWallet);
   </script>
-
 </body>
 </html>
